# Sortlens

./: .gitignore  Build Plan.md  README.md  RELEASE.md  RELEASE_NOTES_0.6.2.md  RELEASE_NOTES_0.6.3.md  RELEASE_NOTES_0.6.4.md  RELEASE_NOTES_0.7.0.md  RELEASE_NOTES_0.8.0.md  SPEC.md  build.ps1  release.ps1  start script.txt  start.ps1
backend/: ImageVerse.spec  README.md  Sortlens.spec  check_db.py  generate_icon.py  main.py  pyproject.toml
backend/app/api/: actions.py  browse.py  collections.py  dupes.py  folders.py  health.py  images.py  library.py  map.py  quality.py  sessions.py  settings_api.py  tags.py  tasks.py  update.py  version.py
backend/app/core/: config.py  database.py  image_metadata.py  media.py  tag_suggestions.py  tasks.py  xmp_writer.py
backend/app/services/: __init__.py  yolo_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ConfirmModal.tsx  ErrorBoundary.tsx  FolderPickerModal.tsx  Header.tsx  HeaderActionsContext.tsx  KeyboardShortcutsOverlay.tsx  Layout.tsx  LibraryHealthPanel.tsx  Sidebar.tsx  SplashScreen.tsx  TagBadge.tsx  TagInput.tsx  Toast.tsx  VideoPlayer.tsx
frontend/src/context/: FolderContext.tsx
frontend/src/pages/: BlurryPage.tsx  BrowsePage.tsx  DuplicatesPage.tsx  LibraryPage.tsx  MapPage.tsx  SettingsPage.tsx  StatsPage.tsx  SwipePage.tsx
frontend/src/services/: api.ts
installer/: README.md  download_prerequisites.ps1  sortlens_installer.iss
